-- end of angular 2 routing tutorial

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <h1>{{title}}</h1>
 <nav>
-	<a [routerLink]="['/dashboard']">Dashboard</a>
-	<a [routerLink]="['/emperors']">Emperors</a>
+	<a [routerLink]="['/dashboard']" routerLinkActive="active">Dashboard</a>
+	<a [routerLink]="['/emperors']" routerLinkActive="active">Emperors</a>
 </nav>
 
 <router-outlet></router-outlet>
