--- a/src/app/emperor-detail/emperor-detail.component.html
+++ b/src/app/emperor-detail/emperor-detail.component.html
@@ -7,4 +7,5 @@
 		<label>name: </label>
 		<input type="text" [(ngModel)]="emperor.name" placeholder="name" name="">
 	</div>
+	<button (click)="goBack()" >Back</button>
 </div>
